examples/test/testpolicy6919.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6919
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key8: value48
      key40: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value40
          key29: value6
          key47: value37
      podSelector:
        matchLabels:
          key24: value15
          key25: value21
